orderhubPro/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orderhub-pro
  labels:
    pod-security.kubernetes.io/enforce: restricted
