orderhubPro/peerauth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: orderhub-pro
spec:
  mtls:
    mode: STRICT
