orderhubPro/ratelimiter.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-orderhub
  namespace: orderhub-pro
spec:
  rateLimit:
    average: 10          
    period: 1s           
    burst: 5
