orderhubPro/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontpro
  namespace: orderhub-pro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontpro

  template:
    metadata:
      labels:
        app: frontpro
    spec:
      serviceAccountName: frontend-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault

      containers:
      - name: frontpro
        image: nginxinc/nginx-unprivileged:alpine
        
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]

        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "125m"

        ports:
        - containerPort: 8080
