orderhubPro/servicebackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendpro-svc
  namespace: orderhub-pro
spec:
  type: ClusterIP
  selector:
    app: backendpro
  ports:
  - port: 5000
    targetPort: 5000
